--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,9 @@ body {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+.section.team-section {
+  padding-top: 0;
+}
 
 /* Logo */
 
@@ -108,7 +111,7 @@ body {
   color: var(--accent-text-color);
 }
 
-/* Main */
+/*Main Studio*/
 
 .hero {
   background-color: var(--hero-backgraund-color);
@@ -124,6 +127,7 @@ body {
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  align-items: center;
 }
 .hero-button {
   padding: 10px 32px;
@@ -140,7 +144,15 @@ body {
   letter-spacing: 0.06em;
   cursor: pointer;
 }
-.features {
+.features-list {
+  display: flex;
+}
+.features-item {
+  margin-left: 30px;
+  flex-basis: calc((100% - 90px) / 4);
+}
+.features .features-item:first-child {
+  margin-left: 0;
 }
 .features-title {
   margin-top: 0;
@@ -158,10 +170,28 @@ body {
   font-size: 14px;
   line-height: 1.71;
 }
-.work {
+.work-list {
+  display: flex;
+}
+.work-item {
+  margin-left: 30px;
+  flex-basis: calc((100% - 60px) / 3);
+}
+.work-list .work-item:first-child {
+  margin-left: 0;
 }
 .team {
   background-color: var(--secondary-backgraund-color);
+}
+.team-list {
+  display: flex;
+}
+.team-item {
+  margin-left: 30px;
+  flex-basis: calc((100% - 90px) / 4);
+}
+.team-list .team-item:first-child {
+  margin-left: 0;
 }
 .work-title,
 .team-title {
@@ -173,6 +203,8 @@ body {
   line-height: 1.17;
   text-align: center;
 }
+.timeimg {
+}
 .team-name {
   margin-top: 30px;
   margin-bottom: 0;
@@ -181,6 +213,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
+  text-align: center;
 }
 .team-text {
   margin-top: 10px;
@@ -188,9 +221,17 @@ body {
 
   font-size: 16px;
   line-height: 1.19;
+  text-align: center;
 }
-.gallery {
+
+/* Main Portfolio */
+
+.button-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
+
 .gallery-button {
   border-radius: 4px;
   padding: 6px 22px;
@@ -204,15 +245,37 @@ body {
   line-height: 1.62;
   cursor: pointer;
 }
+.button-item {
+  margin-left: 8px;
+}
+.button-list .button-item:first-child {
+  margin-left: 0;
+}
 .gallery-button:focus,
 .gallery-button:hover {
   border-color: var(--accent-text-color);
   color: var(--white-color);
   background-color: var(--accent-text-color);
 }
+.gallery-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.gallery-item {
+  margin-top: 30px;
+  margin-right: 30px;
+  flex-basis: calc((100% - 60px) / 3);
+}
+.gallery-list .gallery-item:nth-child(3n) {
+  margin-right: 0;
+}
+.gallery-list .gallery-item:nth-child(-n + 3) {
+  margin-top: 0;
+}
 .gallery-title {
   margin-top: 20px;
   margin-bottom: 0;
+  margin-left: 24px;
 
   color: var(--title-text-color);
   font-size: 18px;
@@ -222,6 +285,8 @@ body {
 .gallery-text {
   margin-top: 4px;
   margin-bottom: 0;
+  margin-left: 24px;
+
   font-size: 16px;
   line-height: 1.87;
 }
