--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #ececec;
 }
 .nav {
   display: flex;
@@ -81,7 +82,7 @@ body {
 .nav-link {
   display: block;
   padding-top: 32px;
-  padding-bottom: 32px;
+  padding-bottom: 31px;
 
   color: var(--title-text-color);
   font-weight: 500;
@@ -151,7 +152,7 @@ body {
   margin-left: 30px;
   flex-basis: calc((100% - 90px) / 4);
 }
-.features .features-item:first-child {
+.features-list .features-item:first-child {
   margin-left: 0;
 }
 .features-title {
@@ -265,6 +266,7 @@ body {
   margin-top: 30px;
   margin-right: 30px;
   flex-basis: calc((100% - 60px) / 3);
+  border-bottom: 1px solid #eeeeee;
 }
 .gallery-list .gallery-item:nth-child(3n) {
   margin-right: 0;
@@ -284,7 +286,7 @@ body {
 }
 .gallery-text {
   margin-top: 4px;
-  margin-bottom: 0;
+  margin-bottom: 20px;
   margin-left: 24px;
 
   font-size: 16px;
