--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,7 @@ body {
 
 .logo {
   margin-right: 93px;
+  padding: 24px 0;
 
   color: var(--accent-text-color);
   font-family: 'Raleway', sans-serif;
@@ -63,6 +64,9 @@ body {
 
 .logo.no-margin {
   margin-right: 0;
+}
+.logo.no-padding {
+  padding: 0;
 }
 
 /* Header */
@@ -103,6 +107,8 @@ body {
   margin-left: 50px;
 }
 .header-contacts {
+  padding: 32px 0;
+
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -115,6 +121,9 @@ body {
 .footer-contacts:hover,
 .nav-link:focus,
 .nav-link:hover {
+  color: var(--accent-text-color);
+}
+.nav-link.current {
   color: var(--accent-text-color);
 }
 
@@ -200,6 +209,7 @@ body {
 .team-item {
   margin-left: 30px;
   flex-basis: calc((100% - 90px) / 4);
+  background-color: var(--white-color);
 }
 .team-list .team-item:first-child {
   margin-left: 0;
@@ -214,10 +224,11 @@ body {
   line-height: 1.17;
   text-align: center;
 }
-.timeimg {
+.team-content {
+  padding: 30px 0;
 }
 .team-name {
-  margin-top: 30px;
+  margin-top: 0;
   margin-bottom: 0;
 
   color: var(--title-text-color);
@@ -264,6 +275,11 @@ body {
 }
 .gallery-button:focus,
 .gallery-button:hover {
+  border-color: var(--accent-text-color);
+  color: var(--white-color);
+  background-color: var(--accent-text-color);
+}
+.gallery-button.current {
   border-color: var(--accent-text-color);
   color: var(--white-color);
   background-color: var(--accent-text-color);
@@ -315,7 +331,7 @@ body {
   background-color: var(--hero-backgraund-color);
 }
 .address {
-  margin-top: 20px;
+  margin-top: 0;
   margin-bottom: 0;
 
   color: var(--white-color);
@@ -323,11 +339,18 @@ body {
   font-size: 14px;
   line-height: 1.71;
 }
-.contacts .item + .item {
+.contacts {
+  margin-top: 20px;
+}
+.footer-list {
   margin-top: 9px;
 }
-.footer-contact {
+.footer-list .item + .item {
+  margin-top: 9px;
+}
+.footer-contacts {
   display: block;
+
   color: var(--adress-text-color);
   font-style: normal;
   font-size: 14px;
